hub/src/model/snapshots/hub__model__installment__tests__extend_installments_bullet.snap
---
source: hub/src/model/installment.rs
expression: installments
---
[
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 1000,
        interest: 11.11,
        due_date: 2025-07-11 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
]
