hub/src/model/snapshots/hub__model__installment__tests__extend_installments_interest_only_weekly.snap
---
source: hub/src/model/installment.rs
expression: installments
---
[
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 0.97,
        due_date: 2025-05-29 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 0.97,
        due_date: 2025-06-05 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 0.97,
        due_date: 2025-06-12 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 0.97,
        due_date: 2025-06-19 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 0.97,
        due_date: 2025-06-26 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 1000,
        interest: 0.97,
        due_date: 2025-07-03 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
]
