hub/src/model/snapshots/hub__model__installment__tests__extend_with_cancelled_and_confirmed_installment.snap
---
source: hub/src/model/installment.rs
expression: installments
---
[
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 10,
        due_date: 2025-05-22 0:00:00.0 +00:00:00,
        status: Cancelled,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 10,
        due_date: 2025-05-22 0:00:00.0 +00:00:00,
        status: Confirmed,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 10,
        due_date: 2025-05-29 0:00:00.0 +00:00:00,
        status: Pending,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 1.94,
        due_date: 2025-06-05 0:00:00.0 +00:00:00,
        status: Pending,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 1000,
        interest: 1.94,
        due_date: 2025-06-12 0:00:00.0 +00:00:00,
        status: Pending,
        paid_date: None,
        payment_id: None,
    },
]
