hub/src/model/snapshots/hub__model__installment__tests__generate_installments_bullet.snap
---
source: hub/src/model/installment.rs
expression: installments
---
[
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 1000,
        interest: 4.1666666666666666666666670000,
        due_date: 2025-06-21 0:00:00.0 +00:00:00,
        status: Pending,
        paid_date: None,
        payment_id: None,
    },
]
