hub/src/model/snapshots/hub__model__installment__tests__generate_installments_interest_only_monthly_single_installment.snap
---
source: hub/src/model/installment.rs
expression: installments
---
[
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 1000,
        interest: 5.14,
        due_date: 2025-06-28 0:00:00.0 +00:00:00,
        status: Pending,
        paid_date: None,
        payment_id: None,
    },
]
