hub/src/model/snapshots/hub__model__installment__tests__generate_installments_interest_only_weekly.snap
---
source: hub/src/model/installment.rs
expression: installments
---
[
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 0.97,
        due_date: 2025-05-29 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 0.97,
        due_date: 2025-06-05 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 0,
        interest: 0.97,
        due_date: 2025-06-12 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 1000,
        interest: 1.25,
        due_date: 2025-06-21 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
]
