hub/src/model/snapshots/hub__model__installment__tests__generate_installments_interest_zero.snap
---
source: hub/src/model/installment.rs
expression: installments
---
[
    Installment {
        id: [UUID],
        contract_id: [UUID],
        principal: 1000,
        interest: 0,
        due_date: 2025-06-05 0:00:00.0 +00:00:00,
        status: Pending,
        late_penalty: FullLiquidation,
        paid_date: None,
        payment_id: None,
    },
]
